# crawl_api

./: .gitignore  main.py  pyproject.toml
src/core/: config.py
src/crawl_api/api/: post.py
src/crawl_api/models/: post.py  post_classified.py  post_unclassified.py
src/crawl_api/services/: post.py
src/kafka/: kafka_producer.py  message.py  service.py
