[project]
name = "crawl-api"
version = "0.1.0"
description = ""
authors = [
    {name = "DESKTOP-KQA2RP4\\ThinkPad",email = "chinhpham1609@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "crawl_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "main:main"